[gd_scene load_steps=6 format=2]

[ext_resource path="res://Presets.gd" type="Script" id=1]
[ext_resource path="res://fonts/root_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://SizeForm.gd" type="Script" id=3]
[ext_resource path="res://fonts/small_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://SizeSelection.gd" type="Script" id=5]

[node name="SizeDropdown" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -80.5
margin_right = 97.0
margin_bottom = 80.5
custom_constants/separation = 64

[node name="SizeForm" type="VBoxContainer" parent="Container"]
margin_right = 194.0
margin_bottom = 75.0
custom_constants/separation = 32
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Container/SizeForm"]
margin_right = 194.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Choose an image size."

[node name="Presets" type="OptionButton" parent="Container/SizeForm"]
margin_top = 55.0
margin_right = 194.0
margin_bottom = 75.0
text = "RPG Maker VXA (640x480)"
items = [ "RPG Maker VXA (640x480)", null, false, 0, null, "Trilogy (800x600)", null, false, 1, null, "Custom", null, false, 2, null ]
selected = 0
script = ExtResource( 1 )

[node name="Resolution" type="HBoxContainer" parent="Container/SizeForm/Presets"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = 7.0
margin_right = 62.0
margin_bottom = 31.0
__meta__ = {
"_edit_group_": true
}

[node name="Res_X" type="LineEdit" parent="Container/SizeForm/Presets/Resolution"]
margin_right = 58.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "640"
align = 1
max_length = 4
context_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="Label_X" type="Label" parent="Container/SizeForm/Presets/Resolution"]
margin_left = 62.0
margin_top = 8.0
margin_right = 69.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
text = "x"
align = 1
uppercase = true

[node name="Res_Y" type="LineEdit" parent="Container/SizeForm/Presets/Resolution"]
margin_left = 73.0
margin_right = 131.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "480"
align = 1
max_length = 4
context_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="ErrorLabel" type="Label" parent="Container"]
visible = false
margin_top = 139.0
margin_right = 194.0
margin_bottom = 188.0
custom_colors/font_color = Color( 1, 0.337255, 0.337255, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Invalid image size. Please correct your choice."
align = 1
autowrap = true

[node name="Confirm" type="Button" parent="Container"]
margin_top = 139.0
margin_right = 194.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 2 )
text = "Confirm"

[connection signal="set_size" from="Container/SizeForm" to="." method="_on_SizeForm_set_size"]
[connection signal="show_error" from="Container/SizeForm" to="." method="_on_SizeForm_show_error"]
[connection signal="item_selected" from="Container/SizeForm/Presets" to="Container/SizeForm/Presets" method="_on_Presets_item_selected"]
[connection signal="text_changed" from="Container/SizeForm/Presets/Resolution/Res_X" to="Container/SizeForm/Presets" method="_on_Res_X_text_changed"]
[connection signal="text_changed" from="Container/SizeForm/Presets/Resolution/Res_Y" to="Container/SizeForm/Presets" method="_on_Res_Y_text_changed"]
[connection signal="button_up" from="Container/Confirm" to="Container/SizeForm" method="_on_Confirm_button_up"]
